src/objects/Meta_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configure the Meta API Credentials here to send WhatsApp Messages</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Secret_key__c</fullName>
        <description>The App Secret Key of your meta Developer App</description>
        <label>App Secret key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Id__c</fullName>
        <description>The Application Id of your Meta App</description>
        <label>Application Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <label>Auth Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>The Channel will be Either &apos;SMS&apos; or &apos;WhatsApp&apos;</description>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Id__c</fullName>
        <description>The Phone number Id in your meta Developer App</description>
        <label>Phone Number Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Name__c</fullName>
        <description>The Name of your Service Provider (Eg:- Twilio, Meta)</description>
        <label>Service Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatsApp_Business_Id__c</fullName>
        <description>The WhatsApp Business Id of your WhatsApp business Account shown in your Meta Developer App</description>
        <label>WhatsApp Business Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Meta Configuration</label>
</CustomObject>